# jupyter-editor-mcp

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
.kiro/settings/: lsp.json
src/jupyter_editor/: operations.py  server.py
tests/: test_cli.py  test_mcp_harness.py  test_phase3.py  test_tool_invocation.py
