[project]
name = "jupyter-editor-mcp"
version = "0.1.0"
description = "MCP server for editing Jupyter notebooks"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "nbformat>=5.10.0",
]

[project.scripts]
jupyter-editor-mcp = "jupyter_editor.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jupyter_editor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=src/jupyter_editor --cov-report=html --cov-report=term"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]
